[gd_scene load_steps=4 format=3 uid="uid://cdeathdialog1"]

[ext_resource type="Script" path="res://scripts/ui/death_dialog.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.02, 0.02, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.1, 0.1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.3, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.2, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="DeathDialog" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU DIED"
theme_override_colors/font_color = Color(0.9, 0.15, 0.15, 1)
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "3"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RestartAtSpawn" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
disabled = true
text = "Restart at Spawn"

[node name="ReviveHere" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
disabled = true
text = "Revive Here"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 1.0
one_shot = false

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/RestartAtSpawn" to="." method="_on_restart_at_spawn_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/ReviveHere" to="." method="_on_revive_here_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
